@@ -427,15 +427,15 @@ public class Entities {
          * {@inheritDoc}
          */
         public void add(String name, int value) {
-            mapNameToValue.put(name, new Integer(value));
-            mapValueToName.put(new Integer(value), name);
+            mapNameToValue.put(name, Integer.valueOf(value));
+            mapValueToName.put(Integer.valueOf(value), name);
         }
 
         /**
          * {@inheritDoc}
          */
         public String name(int value) {
-            return mapValueToName.get(new Integer(value));
+            return mapValueToName.get(Integer.valueOf(value));
         }
 
         /**
@@ -459,15 +459,15 @@ public class Entities {
          * {@inheritDoc}
          */
         public void add(String name, int value) {
-            mapNameToValue.put(name, new Integer(value));
-            mapValueToName.put(new Integer(value), name);
+            mapNameToValue.put(name, Integer.valueOf(value));
+            mapValueToName.put(Integer.valueOf(value), name);
         }
 
         /**
          * {@inheritDoc}
          */
         public String name(int value) {
-            return mapValueToName.get(new Integer(value));
+            return mapValueToName.get(Integer.valueOf(value));
         }
 
         /**
